[gd_scene load_steps=6 format=3 uid="uid://bfhfl30xl5u8y"]

[ext_resource type="Script" path="res://Scripts/World/object.gd" id="1_gmi2i"]
[ext_resource type="Texture2D" uid="uid://dw6ubvgocjxny" path="res://Art/Shadow.png" id="1_u1k1r"]
[ext_resource type="PackedScene" uid="uid://b7jr5q03ovc60" path="res://Scenes/Components/hurtbox.tscn" id="2_3ogvn"]
[ext_resource type="Script" path="res://Scripts/Components/hurtbox.gd" id="4_ch14k"]
[ext_resource type="Script" path="res://Scripts/Drops/drop_manager.gd" id="5_os010"]

[node name="Object" type="StaticBody2D"]
script = ExtResource("1_gmi2i")

[node name="sprite_main" type="Sprite2D" parent="."]

[node name="sprite_shadow" type="Sprite2D" parent="."]
texture = ExtResource("1_u1k1r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource("2_3ogvn")]
collision_layer = 64
collision_mask = 4
script = ExtResource("4_ch14k")

[node name="DamageNumber" type="Node2D" parent="."]
position = Vector2(0, -7)

[node name="DropManager" type="Node2D" parent="."]
script = ExtResource("5_os010")

[connection signal="take_damage" from="Hurtbox" to="." method="take_damage"]
